--- a/codecov.yml
+++ b/codecov.yml
@@ -5,11 +5,13 @@ coverage:
       tests:
         target: 1%
         paths:
-          - "potatocountry"
+          - "potatocountry/src"
         threshold: 0%      # 허용되는 감소 범위
         if_ci_failed: error     # CI 실패시 에러 표시
+        informational: false    # false로 설정하여 실제 상태 체크 활성화
     patch:
       default:
         target: 100%
         threshold: 0%
-        if_ci_failed: error     # CI 실패시 에러 표시
+        if_ci_failed: error
+        informational: false
