--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -24,6 +24,10 @@ jobs:
           with:
             distribution: 'temurin'
             java-version: '21'
+        - name: Make application ymls
+          run: |
+            cd ./src/main/resources
+            echo "${{ secrets.APPLICATION_YML }}" | base64 -d > application.yml
         - name: Test with Gradle
           run: ./gradlew clean test
         - name: Build with Gradle
