--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -26,7 +26,7 @@ jobs:
             java-version: '21'
         - name: Make application ymls
           run: |
-            cd src/main/resources
+            cd ./src/main/resources
             echo "${{ secrets.APPLICATION_YML }}" | base64 -d > application.yml
         - name: Test with Gradle
           run: ./gradlew clean test
