--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -27,7 +27,7 @@ jobs:
         - name: Make docker-compose.yml
           run: echo "${{ secrets.DOKCER_COMPOSE_YML }}" | base64 -d > docker-compose.yml
         - name: Run docker
-          run: docker-compose -f "docker-compose.yml" up -d mysql-potato redis-potato
+          run: docker compose -f "docker-compose.yml" up -d mysql-potato redis-potato
         - name: Wait for MySQL
           run: |
             while ! docker exec mysql-potato mysqladmin ping -h localhost --silent; do
