--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -25,7 +25,7 @@ jobs:
             distribution: 'temurin'
             java-version: '21'
         - name: Make docker-compose.yml
-          run: echo "${{ secrets.DOKCER_COMPOSE_YML }}" | base64 -d > docker-compose.yml
+          run: echo "${{ secrets.DOCKER_COMPOSE_YML }}" | base64 -d > docker-compose.yml
         - name: Run docker
           run: docker compose -f "docker-compose.yml" up -d mysql-potato redis-potato
         - name: Wait for MySQL
